Fix the landscape game display on tablet and mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,6 +512,7 @@ input[type="file"] {
   position: absolute;
   width: 100%;
   grid-template-columns: auto auto 1fr auto auto;
+  grid-template-rows: auto;
   background: grey;
   height: 100vh;
   transform: translateX(100%);
@@ -849,7 +850,8 @@ input[type="file"] {
 
 /* Media queries */
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) { */
+@media screen and (max-width: 800px) {
   body {
     font-size: 8px;
   }
@@ -886,6 +888,7 @@ input[type="file"] {
     height: 20px;
     width: 100%;
     background: linear-gradient(rgb(252, 72, 8), rgb(250, 250, 54), rgb(252, 72, 8));
+    background: pink;
   }
 
   .game-area__info {
@@ -928,22 +931,96 @@ input[type="file"] {
     line-height: 1.4;
   }
 
-  .difficulty {
-    /* -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: difficulty; */
+}
+
+@media screen and (max-width: 820px) and (orientation: landscape) {
+  body {
+    font-size: 8px;
   }
 
-  .puzzle-image {
-    /* -ms-grid-row: 5;
-    -ms-grid-column: 1; */
+  .welcome__logo {
+    width: 50%;
   }
 
-  .game-start {
-    /* -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1; */
+  .game-setup__content {
+    margin: 0 25px 25px 25px;
+    display: grid;
+  }
+
+  .game-scores__logo {
+    height: 84px;
+  }
+
+  .game-scores__headers {
+    margin: 20px 20px 0 20px;
+  }
+
+  .game-scores__content {
+    row-gap: 14px;
+    margin: 15px 20px 20px 20px;
+  }
+
+  .game-area {
+    grid-template-columns: auto auto 1fr auto auto;
+    grid-template-rows: auto;
+  }
+
+  .game-area__border {
+    height: auto;
+    width: 20px;
+    background: linear-gradient(rgb(252, 72, 8), rgb(250, 250, 54), rgb(252, 72, 8));
+    background: black;
+  }
+
+  .game-area__info {
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(1, minmax(80px, 150px));
+  padding: 20px 10px 20px 10px;
+  }
+
+  .info__logo-size {
+    width: 74px;
+  }
+
+  .game-area__buttons {
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(1, minmax(80px, 150px));
+    padding: 20px 10px 20px 10px;
+  }
+
+  [class^=arcade__button] {
+    width: 70px;
+    height: 70px;
+  }
+
+  .game-area__grid {
+    font-size: 25px; /* used to increase grid square size via ems*/
+  }
+
+  .info__photo-size {
+    height: 54px;
+    width: auto;
+  }
+
+  .how-to-play__list-item {
+    font-size: 1.25em;
+    line-height: 1.4;
+  }
+}
+
+/* media query to help and Amazon Fire Kids */
+@media screen and (max-width: 1025px) and (max-height: 415px) {
+  .game-area__grid {
+    font-size: 25px; 
   }
 
 }
+
+/* media query to help for portrait tablet */
+@media screen and (max-width: 800px) and (min-height: 1024px) {
+  .game-area__grid {
+    font-size: 50px; 
+  }
+
+}
+
